# difference-generator-CLI

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter.yml  project_ci.yml  test.yml
gendiff/: __init__.py  args_parser.py  gendiff.py  gendiff_diff.py
gendiff/gendiff_format/: format_diff_json.py  format_diff_plain.py
gendiff/scripts/: gendiff_script.py
gendiff_pack/: __init__.py
gendiff_pack/gendiff_engine/: gendiff.py  gendiff_script_body.py  input_format_parser.py  test.py
gendiff_pack/gendiff_format/: format_diff.py  format_diff_json.py  format_diff_plain.py  format_diff_stylish.py
gendiff_pack/scripts/: gendiff_script.py
gendiff_pack/tests/: tempCodeRunnerFile.py  test_gendiff.py
tests/: test_gendiff.py  test_gendiff_json.py  test_gendiff_make_diff.py  test_gendiff_plain.py  test_gendiff_stylish.py
tests/fixtures/results/json_format/: json_format_result_with_nested_files.json  json_format_result_with_plain_files.json
