[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Second project from Hexlet's Python course"
authors = ["Sergey Kim <<sergkim7@gmail.com>>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
