[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Second project from Hexlet's Python course"
authors = ["Sergey Kim <<sergkim7@gmail.com>>"]
readme = "README.md"
packages = [
    {include = "gendiff_pack"},
    ]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff_pack.scripts.gendiff_script:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
